themes/default/css/global.css
/* ... */
.field_input_filled {
	color: {$GET,native_ui_foreground};
}

.locked_input_field {
	color: {$GET,locked_input_field};
}

.native_ui_foreground {
	color: {$GET,native_ui_foreground};
}

.native_ui_selected {
	color: {$GET,native_ui_selected_foreground};
	background-color: {$GET,native_ui_selected_background};
}

.simple_neat_checkbox {
	overflow: hidden;
}
.simple_neat_checkbox input {
	float: {!en_left};
}
.simple_neat_checkbox span {
	float: {!en_right};
	padding-{!en_left}: 2em;
	margin-top: -1.5em;
	width: 100%;
	{$BETA_CSS_PROPERTY,box-sizing: border-box;}
}

.captcha_frame {
	width: 100px;
	height: 42px;
}

.captcha {
	font-size: 0.8em;
	margin-bottom: 3px;
}

.captcha a {
	float: {!en_right};
	margin: 10px 0 0 5px;
}

.quite_wide_field {
	width: 88%;
}

.box___confirm_screen {
	margin-bottom: 2em;
}

.box___confirm_screen img:not([width]):not([height]) {
	max-width: 100%;
	height: auto;
}

/*
=========================
======Common forms=======
=========================
*/

.wide_field {
	width: 100%;
	{$BETA_CSS_PROPERTY,box-sizing: border-box;}
	margin-left: 0 !important;
	margin-right: 0 !important;
}
.fields_set_contents .constrain_field, .fields_set_contents .wide_field {
	max-width: 500px;
}
.fields_set_contents .constrain_field, .fields_set_contents input .wide_field {
	display: inline;
}
.constrain_field + .constrain_field {
	margin: 0.25em 0;
}

/*
=========================
=========Buttons=========
=========================
*/

/* This is used to overlay special out-of-flow edit buttons, for staff only */
input.magic_image_edit_link {
	font-size: 13px;
	border: 1px solid {$GET,light_error_border} !important;
	background-color: {$GET,light_error_background} !important;
	color: {$GET,slightly_seeded_text} !important;
	text-shadow: 0 0 0;
}

.button_screen_item_tall {
	background-image: none !important;
}

.button_micro, .button_screen, .button_screen_item, .hero_section .hero_button a, body .hero_section .hero_button>a.user_link {
	display: inline-block;
	{$BETA_CSS_PROPERTY,box-sizing: border-box;}
	border: 1px solid {$GET,dark_border};
	{$BETA_CSS_PROPERTY,border-radius: 6px;}
	margin: 0.25em;
	{$BETA_CSS_PROPERTY,box-shadow: 0 0 5px {$GET,standard_border};}
	text-shadow: 2px 1px 2px {$GET,dark_shadow};
	background-color: {$GET,dgrad};
	background-repeat: no-repeat;
	background-position: 96% 3px; /*fallback*/
	background-position: right 7px center;
	color: {$GET,box_title_text} !important;
	text-decoration: none !important;
	-webkit-appearance: none;
	vertical-align: middle;
	cursor: pointer;
}
div>.button_micro:first-child, div>.button_screen:first-child, div>.button_screen_item:first-child, .hero_section .hero_button a:first-child {
	margin-left: 2px; /* enough for the shadow */
}

.button_faded {
	opacity: 0.5 !important;
}

.button_screen {
	background-size: 24px 24px;
	padding: 6px 39px 7px 7px;
	border-width: 2px;
	font-size: 13px;
	min-width: 8em;
}
.buttons__previous.button_screen, .buttons__previous_none.button_screen {
	padding: 6px 7px 7px 39px !important;
	background-position: 7px center !important;
}
.button_screen_item {
	padding: 3px 30px 4px 5px;
	background-size: 18px 18px;
	font-size: 13px;
	/*{+START,IF,{$MOBILE}}*/
		margin: 0.25em 0.1em !important;
	/*{+END}*/
}
.button_micro {
	padding: 1px 3px 2px 3px;
	font-size: 12px;
	margin: 1px 0.25em 0 0.25em; /* Push it up a bit due to confined space */
	text-shadow: 1px 1px 1px {$GET,dark_shadow};
	/*{+START,IF,{$MOBILE}}*/
		line-height: 0.9em;
	/*{+END}*/
}
div .button_micro {
	background-image: none !important; /* Too loud for such a small space */
	{$BETA_CSS_PROPERTY,border-radius: 4px;}
}

.button_screen, .button_screen_item, .button_micro, .toggleable_tray_button img {
	{$BETA_CSS_PROPERTY,opacity: 0.85;}
	{$BETA_CSS_PROPERTY,transform: scale(1);} /* Needed to stop size jerk during animation, by forcing it as a layer at all times */
	display: inline-block;
}
.buttons__previous_none, .buttons__next_none {
	{$BETA_CSS_PROPERTY,opacity: 0.85 !important;}
	cursor: not-allowed;
}
.button_micro:hover, .button_screen:hover, .button_screen_item:hover {
	{$BETA_CSS_PROPERTY,opacity: 1.0;}
}
.button_screen:hover, .button_screen_item:hover, .button_micro:hover, .toggleable_tray_button:hover img,
body.touch_enabled .button_screen, body.touch_enabled .button_screen_item, body.touch_enabled .button_micro, body.touch_enabled .toggleable_tray_button img {
	{$BETA_CSS_PROPERTY,opacity: 1.0;} /* Needed for Opera */
}
.button_micro:disabled, .button_screen:disabled, .button_screen_item:disabled {
	{$BETA_CSS_PROPERTY,opacity: 0.4 !important;}
	cursor: default;
}

.proceed_button {
	text-align: center;
}
.proceed_button:last-child {
	margin-bottom: 0;
}
div.proceed_button_left {
	text-align: {!en_left};
}
div.proceed_button_left_2 {
	text-align: {!en_left};
	margin-{!en_left}: -2em;
}

.shunted_button {
	clear: {!en_right};
	text-align: {!en_right};
}

.innocuous_fieldset {
	border: 0;
	padding: 0;
	margin: 0 0 1em 0;
	min-width: 0; /* Works around webkit bug, where it breaks max-width:100% inside because the size calculation has been inverted by the default "min-width: -webkit-min-content;" rule  */
}

.mass_select_marker {
	padding: 0.2em;
	float: {!en_right};
	border: 1px solid {$GET,standard_border};
	margin-{!en_left}: 1em;
	margin-top: 1px; /* To get it past a possible overflow:hidden (may be a browser bug) */
}
.mass_select_marker input {
	width: 25px;
	height: 25px;
	margin: 0;
}

.global_button_ref_point {
	position: absolute;
	min-width: 22em;
	font-size: 13px; /* Puts it back, as was set to zero elsewhere */
	z-index: 2000;
}
.global_button_ref_point .box {
	{$BETA_CSS_PROPERTY,box-shadow: 3px 3px 10px {$GET,standard_border};}
}

.global_button_ref_point .associated_links_block_group, .notification+.notification {
	margin-top: 0.5em;
	border-top: 1px solid {$GET,pale_border};
	padding-top: 0.5em;
}
/* ... */

